--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
-{ "name": "Hangar-HEIM-app",
+{
+  "name": "Hangar-HEIM-app",
   "version": "1.0.0",
-  "homepage": "https://cryptointi.github.io/hangar",
+  "homepage": "https://cryptointi.github.io/",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "clean": "shx rm -rf dist dist.browser",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@project-serum/anchor": "^0.20.1",
